phase1 presentation completed

--- a/expiry_expert/src/App.css
+++ b/expiry_expert/src/App.css
@@ -1,45 +1,45 @@
 :root {
   --text: #d4c6d4;
   --background: #292934;
-  --primary: #8A0899;
+  --primary: #8a0899;
   --secondary: #dbadff;
   --accent: #361397;
-  --linearPrimarySecondary: linear-gradient(#8A0899, #dbadff);
---linearPrimaryAccent: linear-gradient(#8A0899, #361397);
---linearSecondaryAccent: linear-gradient(#dbadff, #361397);
---radialPrimarySecondary: radial-gradient(#8A0899, #dbadff);
---radialPrimaryAccent: radial-gradient(#8A0899, #361397);
---radialSecondaryAccent: radial-gradient(#dbadff, #361397);
---linearSecondaryPrimary:linear-gradient( #dbadff,#8A0899);
---radialAccentPrimary: radial-gradient(#361397,#8A0899);
-
+  --linearPrimarySecondary: linear-gradient(#8a0899, #dbadff);
+  --linearPrimaryAccent: linear-gradient(#8a0899, #361397);
+  --linearSecondaryAccent: linear-gradient(#dbadff, #361397);
+  --radialPrimarySecondary: radial-gradient(#8a0899, #dbadff);
+  --radialPrimaryAccent: radial-gradient(#8a0899, #361397);
+  --radialSecondaryAccent: radial-gradient(#dbadff, #361397);
+  --linearSecondaryPrimary: linear-gradient(#dbadff, #8a0899);
+  --radialAccentPrimary: radial-gradient(#361397, #8a0899);
+  --linearAccentPrimary: linear-gradient(#361397, #8a0899);
 }
-body{
+body {
   background-color: var(--background);
-  color:white;
+  color: white;
 }
-
 
 .App {
   text-align: center;
 }
 
-header{
-  background: linear-gradient(var(--background),black);
-  padding: 20px;
- 
+header {
+  background: linear-gradient(black, var(--background));
+  padding: 1px;
 }
-header h1{
-  color:var(--primary)
+header h1 {
+  color: var(--primary);
+  font-size: 35px;
 }
 nav ul {
   list-style-type: none;
-  padding:10px;
+  padding: 10px;
   display: flex;
   justify-content: space-around; /* Distribute space evenly between items */
   align-items: center; /* Align items vertically centered */
   margin: 0px;
-  background-color:var(--sec);
+  background-color: var(--sec);
+  font-size: 17px;
 }
 
 nav li {
@@ -50,8 +50,7 @@ nav li {
   color: var(--secondary);
 }
 
-nav li:hover{
-
+nav li:hover {
   color: var(--primary);
 }
 
@@ -59,18 +58,30 @@ nav li button {
   margin-left: 5px; /* Add some space between the category name and the edit button */
 }
 
-.navbar{
-  color:black;
+.navbar {
+  color: black;
 }
 .product-form {
   border: 1px solid #ddd;
-  padding: 20px;
-  margin: 20px;
+  padding: 0px;
+  margin: 5px;
   text-align: left;
+  align-items: center;
+  justify-content: center;
+}
+
+nav {
+  background: radial-gradient(var(--background), rgb(0, 0, 0, 0.5));
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  padding: 0px;
+  margin: 0px;
+}
+.form-column {
+  padding: 0px;
 }
 
 .product-form button {
-  background-color:var(--primary);
+  background-color: var(--primary);
   color: white;
   border: none;
   padding: 10px;
@@ -79,25 +90,23 @@ nav li button {
 }
 
 .product-form button:hover {
-  background-color:var(--accent);
+  background-color: var(--accent);
 }
 
 .product-form form {
   display: flex;
   flex-direction: column;
+  padding: 0;
+  margin: 0;
 }
 
-.product-form form label {
-  margin-bottom: 10px;
-}
-
-.product-form form input,
-.product-form form textarea {
+.product-form label {
   margin-bottom: 10px;
 }
 
 .category-selector {
   margin: 20px;
+  padding-right: 20px;
 }
 
 .category-selector label {
@@ -105,7 +114,7 @@ nav li button {
   margin-right: 10px;
 }
 .floating-button {
-  background: var(--linearSecondaryPrimary);
+  background: var(--linearPrimaryAccent);
   color: white;
   border: none;
   width: 60px;
@@ -123,9 +132,8 @@ nav li button {
 }
 
 .floating-button:hover {
-  background: var(--linearPrimarySecondary);
+  background: var(--linearAccentPrimary);
 }
-
 
 .gradient-text {
   background: var(--linearPrimaryAccent);
@@ -141,16 +149,16 @@ table {
   margin-top: 20px;
 }
 
-th, td {
+th,
+td {
   border: 1px solid white;
   padding: 8px;
   text-align: left;
- 
 }
 
 th {
   background-color: var(--secondary);
-  color:var(--background);
+  color: var(--background);
 }
 
 button {
@@ -158,49 +166,118 @@ button {
 }
 .edit {
   cursor: pointer;
-  background: url(../public/edit.jpeg);
+  background: url(../public/images/edit1.png);
   background-repeat: no-repeat;
-  background-size: 165%;
-  background-position: -13px;
-  border-radius: 50%;
   border: none;
-  height: 40px;
-  width: 40px;
+  height: 32px;
+  width: 32px;
   position: relative; /* Ensure the button is relative for absolute positioning of pseudo-element */
 }
 
-.edit:hover::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(204, 67, 254, 0.25); /* Adjust opacity and color as needed */
-  border-radius: 50%;
+.edit:hover {
+  cursor: pointer;
+  background: url(../public/images/edit2.png);
+  background-repeat: no-repeat;
+  border: none;
+  height: 32px;
+  width: 32px;
+  position: relative;
 }
 
 .delete {
   cursor: pointer;
-  background: url(../public/bin.jpeg);
+  background: url(../public/images/delete1.png);
   background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: 0px;
-  border-radius: 50%;
   border: none;
-  height: 40px;
-  width: 40px;
+  height: 32px;
+  width: 32px;
   position: relative; /* Ensure the button is relative for absolute positioning of pseudo-element */
 }
 
-.delete:hover::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(204, 67, 254, 0.25); /* Adjust opacity and color as needed */
-  border-radius: 50%;
+.delete:hover {
+  cursor: pointer;
+  background: url(../public/images/delete2.png);
+  background-repeat: no-repeat;
+  border: none;
+  height: 32px;
+  width: 32px;
+  position: relative;
+}
+.forms {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0px;
+  margin: 0px;
+}
+.product-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  padding-right: 25px;
+  padding-left: 25px;
 }
 
+.product-form .form-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  margin-top: 10px;
+
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+  width: 450px;
+}
+
+.product-form label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.product-form select,
+.product-form input,
+.product-form textarea,
+.product-form button {
+  padding: 10px;
+  margin: 10px;
+
+  border: 1px solid #ccc;
+  border-radius: 15px;
+}
+
+.product-form button {
+  margin-top: 5px;
+  background: var(--primary);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.product-form button:hover {
+  background: var(--accent);
+}
+
+.product-form {
+  display: flex;
+
+  justify-content: space-between;
+}
+
+.form-column {
+  padding: 20px;
+}
+
+video {
+  width: 100%;
+}
+
+.canvas-container {
+  display: none;
+}
